<package>
  <name>cv_backports</name>
  <version>0.1.3</version>
  <description>
   Backporting features from the 2.4.x.y series of opencv releases to indigo.
  </description>
  <url type="repository">https://bitbucket.org/stonier/cv_backports</url>
  <url type="bugtracker">https://bitbucket.org/stonier/cv_backports/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqtgui4</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libqtgui4</run_depend>
  <run_depend>roslib</run_depend>

</package>
